# jirapp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
src/: App.vue  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  inject.rs  jira.rs  lib.rs  main.rs  settings.rs
src-tauri/src/inject/: card_key_copy.js  column_color.js  machinery.js  reload_button.js  reload_shortcut.js
src/composables/: useUpdater.ts
