[package]
name = "jirapp"
version = "0.2.0"
description = "Jira 専用ブラウザ (Site-Specific Browser) for Jira Cloud"
authors = ["kanfu"]
edition = "2021"
rust-version = "1.77.2"

# https://doc.rust-lang.org/cargo/reference/manifest.html#the-lib-section
[lib]
name = "jirapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
# Jira ウィンドウの位置・サイズ・最大化状態を保存し、次回起動時に復元する。
tauri-plugin-window-state = "2"
# セルフアップデート（GitHub Releases の latest.json を参照して更新を取得）。
tauri-plugin-updater = "2"
# アップデート適用後の再起動に使う。
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Jira ウィンドウのシステムメニュー（タイトルバー左上アイコンのメニュー）に
# 「設定を開く」を追加するための Win32 連携。バージョンは tauri/tao が使う 0.61 に合わせる。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
